Fix list item spacing

--- a/scss/site/_article.scss
+++ b/scss/site/_article.scss
@@ -199,7 +199,7 @@ article {
     margin-left: 20px;
     }
     li {
-    	margin-bottom: 12px;
+    	margin-bottom: 0;
     	margin-left: 25px;
     }
 
